# thresholdfloor

./: .gitignore  LICENSE  MANIFEST.in  README.md  meow.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/thresholdfloor/: __init__.py  aether_thresher.py  assets_bundle.pkl  bundle.py  elevation.py  floor_sigil.py  shadow_calibration.py  shadow_simulation.py  threshold_floor.py
src/thresholdfloor.egg-info/: PKG-INFO
src/thresholdfloor/tests/: __init__.py  test_floor_sigil.py  test_floor_sigil_alignments.py  test_geometric.py  test_solar.py  test_threshold.py
