[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thresholdfloor"
version = "0.0.2"
description = "A floor below for tuning to what's above"
requires-python = ">=3.11"
dependencies = [
  "pytz>=2023.3",
  "python-dateutil>=2.8.2",
  "aetherfield>=0.5.1",
  "rasterio>=1.4.4"
]
readme = "README.md"
authors = [{ name = "WitchMithras" }]
license = { text = "Proprietary (staging)" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["thresholdfloor*"]
exclude = ["tests*"]

